@@ -1,6 +1,8 @@
 0.3.5
 =====
 
+- FIXED: Avoid unnecessary fetch remotes on skip/resolve/save (#7)
+
 - FIXED: No longer leaves unused patch files in the working-repo (#9)
 
 
